# cpp-periphery

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/periphery/: buffer.hpp  chardevice.hpp  gpio.hpp  i2c.hpp  mmio.hpp  periphery.hpp  serial.hpp  spi.hpp
src/: i2c.hpp  mmio.hpp  spi.hpp
src/periphery/: chardevice.cpp  gpio.cpp  i2c.cpp  mmio.cpp  serial.cpp  spi.cpp
src/test/: test-i2c.cpp  test-mmio.cpp  test-serial.cpp  test-spi.cpp
tests/: test-mmio.cpp
